--- a/TD/TD1/td1_tableaux.ipynb
+++ b/TD/TD1/td1_tableaux.ipynb
@@ -51,9 +51,17 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "def insertion_tableau (L,v,i):\n",
+    "    if i > len(L) or i < 0:\n",
+    "        return(\"Donner un i inférieur ou égal à la taille de la liste et non négatif\")\n",
+    "    else:\n",
+    "        L.append(0)\n",
+    "        for n in range (len(L)-i):\n",
+    "            L[-1-n] = L[-2-n]\n",
+    "        L[i] = v\n",
+    "    return L\n",
+    "\n",
+    "print(insertion_tableau([1,2,3,4,5,6],3.5,4))\n",
     "\n",
     "\n"
    ]
@@ -115,9 +123,10 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "def supression_tableau (L,i):\n",
+    "    L\n",
+    "\n",
+    "print(supression_tableau([1,2,3,4,5,6],3))\n",
     "\n",
     "\n"
    ]
@@ -190,10 +199,13 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "def copie_tableau (L):\n",
+    "    M = []\n",
+    "    for i in range (len(L)):\n",
+    "        M.append(L[i])\n",
+    "    return M\n",
     "\n",
+    "print(copie_tableau([1,2,3]))\n",
     "\n"
    ]
   },
@@ -293,9 +305,14 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "def minimum_tableau (L):\n",
+    "    min = L[0]\n",
+    "    for i in range (1,len(L)):\n",
+    "        if min > L[i]:\n",
+    "            min = L[i]\n",
+    "    return min\n",
+    "\n",
+    "print(minimum_tableau([7,3,4]))\n",
     "\n",
     "\n"
    ]
@@ -323,9 +340,15 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "def minimum_tableau_trie (L):\n",
+    "    M = []\n",
+    "    for i in range (len(L)):\n",
+    "        M.append(minimum_tableau(L))\n",
+    "        L.remove(minimum_tableau(L))\n",
+    "    min = minimum_tableau (M)\n",
+    "    return M,min\n",
+    "\n",
+    "minimum_tableau_trie([3,9,1,4,0])\n",
     "\n",
     "\n"
    ]
@@ -396,10 +419,14 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "def deplacer(T,k):\n",
+    "    for i in range (len(T)):\n",
+    "        if k<T[i]:\n",
+    "            T.append(T[i])\n",
+    "            T.remove(T[i])\n",
+    "    return T\n",
     "\n",
+    "deplacer([3,8,1,0,7],4)\n",
     "\n"
    ]
   },
@@ -619,10 +646,14 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "def deplacer(T,k):\n",
+    "    for i in range (len(T)):\n",
+    "        if k<T[i]:\n",
+    "            T.append(T[i])\n",
+    "            T.remove(T[i])\n",
+    "    return T\n",
     "\n",
+    "deplacer([3,8,1,0,7],4)\n",
     "\n"
    ]
   },
@@ -651,9 +682,15 @@
    },
    "outputs": [],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "def deplacer(T,k):\n",
+    "    for i in range (len(T)):\n",
+    "        if k<T[i]:\n",
+    "            T.append(T[i])\n",
+    "            T.remove(T[i])\n",
+    "    return T\n",
+    "\n",
+    "deplacer([3,8,1,0,7],4)\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -662,7 +699,7 @@
  "metadata": {
   "celltoolbar": "Format de la Cellule Texte Brut",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "l1-python",
    "language": "python",
    "name": "python3"
   },
@@ -676,7 +713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.4"
   },
   "toc": {
    "base_numbering": 1,
@@ -690,6 +727,11 @@
    "toc_position": {},
    "toc_section_display": false,
    "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "014cb9d83026b9c50ea03e62b7bea9f0f1470472ea64b2b9be2b3cd5079cb509"
+   }
   }
  },
  "nbformat": 4,
