--- a/TD/TD1/td1_tableaux.ipynb
+++ b/TD/TD1/td1_tableaux.ipynb
@@ -115,16 +115,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "tags": [
      "answer"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 5, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "def supression_tableau (L,i):\n",
-    "    L\n",
+    "    j = i\n",
+    "    while (j<len(L)-1):\n",
+    "        L[j]=L[j+1]\n",
+    "        j+=1\n",
+    "    L.pop()\n",
+    "    return L\n",
+    "\n",
     "\n",
     "print(supression_tableau([1,2,3,4,5,6],3))\n",
     "\n",
@@ -638,22 +652,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "tags": [
      "answer"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 0, 1, 8, 7]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def deplacer(T,k):\n",
-    "    for i in range (len(T)):\n",
-    "        if k<T[i]:\n",
-    "            T.append(T[i])\n",
-    "            T.remove(T[i])\n",
-    "    return T\n",
-    "\n",
+    "def deplacer(L,k):\n",
+    "#    for i in range (len(T)):\n",
+    "#        if k<T[i]:\n",
+    "#            T.append(T[i])\n",
+    "#            T.remove(T[i])\n",
+    "#    return T \n",
+    "    i =0\n",
+    "    j = len(L)-1\n",
+    "    while (i<j):\n",
+    "        if (L[i] <= k):\n",
+    "            i+=1\n",
+    "        elif ((L[j])>=k):\n",
+    "            j-=1\n",
+    "        else:\n",
+    "            L[i],L[j]=L[j],L[i]\n",
+    "    return L\n",
     "deplacer([3,8,1,0,7],4)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
